--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/custom-forms": "^0.2.1",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "epic-spinners": "^1.1.0",
+    "tailwindcss": "^1.9.6",
+    "vue": "^2.6.11",
+    "vue-click-outside": "^1.1.0",
+    "vue-router": "^3.2.0",
+    "vue2-editor": "^2.10.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
