--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "epic-spinners": "^1.1.0",
+    "lodash": "^4.17.20",
     "tailwindcss": "^1.9.6",
     "vue": "^2.6.11",
     "vue-click-outside": "^1.1.0",
     "vue-router": "^3.2.0",
-    "vue2-editor": "^2.10.2"
+    "vue2-editor": "^2.10.2",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
